MDEV-27393 Timezone tables cannot have descending indexes

replace the assert with an if().

asserts should not be used on the input (even without DESC indexes
the table could've been corrupted)